infrastructure/sso/lldap/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lldap
  template:
    metadata:
      labels:
        app: lldap
    spec:
      containers:
        - name: lldap
          image: lldap/lldap:v0.5.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3890
              name: ldap
            - containerPort: 17170
              name: http
          volumeMounts:
            - name: lldap-data
              mountPath: "/data"
      volumes:
        - name: lldap-data
          persistentVolumeClaim:
            claimName: lldap-data
